--- a/Gestion-des-R-servations-de-Salle/src/main/resources/application.properties
+++ b/Gestion-des-R-servations-de-Salle/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=Gestion-des-R-servations-de-Salle
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/DB?createDatabaseIfNotExist=true
+spring.sql.init.mode=always
