--- a/Gestion-des-R-servations-de-Salle/src/main/resources/application.properties
+++ b/Gestion-des-R-servations-de-Salle/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/DB?createDatabaseIfNotExist=true
 spring.sql.init.mode=always
+# Définit l'ordre des fichiers SQL
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
